--- a/.gitmodules
+++ b/.gitmodules
@@ -2,3 +2,7 @@
 	path = Qt6
 	url = https://github.com/qt/qt5
 	branch = 6.6.3
+[submodule "Hamlib"]
+	path = Hamlib
+	url = https://github.com/Hamlib/Hamlib.git
+	branch = Hamlib-4.6.3
