Set Qt6 submodule version to 6.6.3

--- a/.gitmodules
+++ b/.gitmodules
@@ -1,6 +1,7 @@
 [submodule "Qt6"]
 	path = Qt6
 	url = https://github.com/Chris-AC9KH/Qt6.git
+        branch = 6.6.3
 [submodule "Hamlib"]
 	path = Hamlib
 	url = https://github.com/Chris-AC9KH/Hamlib.git
