--- a/.github/workflows/win64-hamlib-msys.yml
+++ b/.github/workflows/win64-hamlib-msys.yml
@@ -3,7 +3,9 @@ name: Build Hamlib SDK on Windows (MSYS2)
 on:
   push:
     branches: [ "main" ]
-
+  pull_request:
+    branches: [ "main" ]
+    
 jobs:
   build-hamlib-windows-msys2:
     runs-on: windows-2025
