--- a/.github/workflows/win64-hamlib-msys.yml
+++ b/.github/workflows/win64-hamlib-msys.yml
@@ -2,9 +2,9 @@ name: Build Hamlib SDK on Windows (MSYS2)
 
 on:
   push:
-    branches: [ "main" ]
+    branches: [ "master" ]
   pull_request:
-    branches: [ "main" ]
+    branches: [ "master" ]
     
 jobs:
   build-hamlib-windows-msys2:
