--- a/.github/workflows/win64-hamlib-msys.yml
+++ b/.github/workflows/win64-hamlib-msys.yml
@@ -65,7 +65,7 @@ jobs:
           
       - name: Create zip file to upload to release page
         run: |
-          cd ../hamlib-install/
+          cd "D:/a/js8call/hamlib-install/"
           zip -r /d/a/js8call/js8call/hamlib-windows-msys2-binaries-ci.zip .
 
       - name: Create Release and Upload Assets
